# serializer version: 1
# name: test_entities_created[media_player.avr_3805-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'cd',
        'cdr_tape1',
        'dbs_sat',
        'dvd',
        'phono',
        'tuner',
        'tv',
        'v_aux',
        'vcr_1',
        'vcr_2',
        'vdp',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.avr_3805',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.RECEIVER: 'receiver'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'denon_rs232',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 135052>,
    'translation_key': 'receiver',
    'unique_id': '01KPBBPM6WCQ8148EFR0TCG1WW_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_created[media_player.avr_3805-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'receiver',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AVR-3805',
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_MUTED: 'is_volume_muted'>: False,
      <MediaPlayerEntityStateAttribute.INPUT_SOURCE: 'source'>: 'cd',
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'cd',
        'cdr_tape1',
        'dbs_sat',
        'dvd',
        'phono',
        'tuner',
        'tv',
        'v_aux',
        'vcr_1',
        'vcr_2',
        'vdp',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 135052>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 0.5555555555555556,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.avr_3805',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities_created[media_player.avr_3805_zone_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'cd',
        'cdr_tape1',
        'dbs_sat',
        'dvd',
        'phono',
        'tuner',
        'tv',
        'v_aux',
        'vcr_1',
        'vcr_2',
        'vdp',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.avr_3805_zone_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 2',
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.RECEIVER: 'receiver'>,
    'original_icon': None,
    'original_name': 'Zone 2',
    'platform': 'denon_rs232',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 3460>,
    'translation_key': 'receiver',
    'unique_id': '01KPBBPM6WCQ8148EFR0TCG1WW_zone_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_created[media_player.avr_3805_zone_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'receiver',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AVR-3805 Zone 2',
      <MediaPlayerEntityStateAttribute.MEDIA_CHANNEL: 'media_channel'>: '99.30',
      <MediaPlayerEntityStateAttribute.INPUT_SOURCE: 'source'>: 'tuner',
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'cd',
        'cdr_tape1',
        'dbs_sat',
        'dvd',
        'phono',
        'tuner',
        'tv',
        'v_aux',
        'vcr_1',
        'vcr_2',
        'vdp',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 3460>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 0.6666666666666666,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.avr_3805_zone_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities_created[media_player.avr_3805_zone_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'cd',
        'cdr_tape1',
        'dbs_sat',
        'dvd',
        'phono',
        'tuner',
        'tv',
        'v_aux',
        'vcr_1',
        'vcr_2',
        'vdp',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.avr_3805_zone_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 3',
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.RECEIVER: 'receiver'>,
    'original_icon': None,
    'original_name': 'Zone 3',
    'platform': 'denon_rs232',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 3460>,
    'translation_key': 'receiver',
    'unique_id': '01KPBBPM6WCQ8148EFR0TCG1WW_zone_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_created[media_player.avr_3805_zone_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'receiver',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AVR-3805 Zone 3',
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'cd',
        'cdr_tape1',
        'dbs_sat',
        'dvd',
        'phono',
        'tuner',
        'tv',
        'v_aux',
        'vcr_1',
        'vcr_2',
        'vdp',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 3460>,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.avr_3805_zone_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
